# mcp-devbench

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  MANUAL_STEPS.md  README.md  SEMANTIC_RELEASE_SETUP.md  alembic.ini  docker-compose.yml  index.html  mcp-devbench-work-breakdown.md  mkdocs.yml  objects.inv  package.json  pyproject.toml  pyrightconfig.json  ruff.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  decision.yml  feature.yml  spike.yml
.github/workflows/: branch-ruff-autofix.yml  ci.yml  docs.yml  pr-size-guard.yml  release.yml  sbom-pr.yml  security.yml  semantic-pr.yml  test-e2e.yml
about/changelog/: index.html
about/license/: index.html
about/roadmap/: index.html
alembic/: env.py
alembic/versions/: 4852ac5d4d31_add_idempotency_key_to_containers.py  e31b6643791f_initial_schema_with_containers_.py
api/authentication/: index.html
api/errors/: index.html
api/overview/: index.html
api/tools/: index.html
app/: __init__.py  audit.py  config.py  main.py  mcp_server.py  runtime_docker.py  state.py
development/architecture/: index.html
development/contributing/: index.html
development/project-style/: index.html
development/releases/: index.html
development/testing/: index.html
docs/: DECISIONS.md  architecture-deltas-m0.md  architecture.md  index.md  onboarding-runbook-m0.md
docs/about/: changelog.md  license.md  roadmap.md
docs/api/: authentication.md  errors.md  overview.md  tools.md
docs/development/: architecture.md  contributing.md  project-style.md  releases.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: containers.md  execution.md  filesystem.md  monitoring.md  security.md
docs/operations/: deployment.md  monitoring.md  troubleshooting.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/containers/: index.html
guide/execution/: index.html
guide/filesystem/: index.html
guide/monitoring/: index.html
guide/security/: index.html
operations/deployment/: index.html
operations/monitoring/: index.html
operations/troubleshooting/: index.html
scripts/smoke/: ensure-default.md
search/: search_index.json
src/mcp_devbench/: __init__.py  audit.py  auth.py  config.py  errors.py  main.py  mcp_server.py  mcp_tools.py  runtime_docker.py  server.py  server.py.backup  state.py
src/mcp_devbench/config/: __init__.py  settings.py
src/mcp_devbench/managers/: __init__.py  container_manager.py  exec_manager.py  filesystem_manager.py  image_policy_manager.py  maintenance_manager.py  output_streamer.py  reconciliation_manager.py  security_manager.py  shutdown_coordinator.py  warm_pool_manager.py
src/mcp_devbench/models/: __init__.py  attachments.py  base.py  containers.py  database.py  execs.py
src/mcp_devbench/repositories/: __init__.py  attachments.py  base.py  containers.py  execs.py
src/mcp_devbench/utils/: __init__.py  audit_logger.py  cleanup.py  docker_client.py  exceptions.py  logging.py  metrics_collector.py
tests/: conftest.py  test_imports.py  test_markdownlint.py  test_mcp_tools.py  test_smoke.py
tests/contract/: __init__.py  test_mcp_compliance.py
tests/e2e/: __init__.py  test_complete_workflow.py  test_error_scenarios.py
tests/integration/: test_container_manager.py
tests/performance/: __init__.py  test_benchmarks.py
tests/property/: __init__.py  test_idempotency.py  test_path_security.py
tests/unit/: test_audit_logger.py  test_auth_config.py  test_container_repository.py  test_exec_manager.py  test_filesystem_manager.py  test_image_policy_manager.py  test_maintenance_manager.py  test_mcp_tools.py  test_metrics_collector.py  test_output_streamer.py  test_reconciliation_manager.py  test_security_manager.py  test_shutdown_coordinator.py  test_spawn_idempotency.py  test_warm_pool_manager.py
